<resources>
    <string name="app_name">CoroutinesLogApp</string>
    <string name="token_hint">Token</string>
    <string name="username_hint">Username</string>
    <string name="login">Login</string>
    <string name="invalid_username">Invalid username!</string>
    <string name="invalid_token">Invalid token!</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="try_again_later">Try again later!</string>
    <string name="network_connection_established">Network connection established!</string>
    <string name="unavailable_network_connection">Unavailable network connection</string>
    <string name="biography">Bio</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="public_repos">Public Repos</string>
    <string name="private_repos">Private Repos</string>
    <string name="empty" />
    <string name="view_repositories">View Repositories</string>
    <string name="contact_by_email">Contact by email</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="retry">Retry</string>
    <string name="email_subject">Subject Test</string>
    <string name="email_body">Body Test</string>
    <string name="email_title">Title Test</string>
    <string name="logout">Log out</string>
    <string name="visibility_private">Private</string>
    <string name="visibility_public">Public</string>
    <string name="no_description">No description</string>
    <string name="affiliation">Affiliation</string>
    <string name="sort">Sort</string>
    <string name="affiliation_description">Affiliation option for fetching repositories</string>
    <string name="sort_description">Sort criteria for repositories</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="repositories">Repositories</string>
    <array name="affiliation">
        <item>Owner</item>
        <item>Collaborator</item>
        <item>Organization Member</item>
    </array>
    <array name="sort">
        <item>Created</item>
        <item>Updated</item>
        <item>Pushed</item>
        <item>Full Name</item>
    </array>
</resources>
